src/layouts/app.sass
@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700')

// vars
$titleFont: 'Nunito Sans', sans-serif
$blue: #0000ff;
$white: #fff

// base styles
body
  margin: 0
  box-sizing: border-box
  font-family: $titleFont

#root
  min-height: 100vh

h1
  margin: 0 auto
  font-size: 10vw
  text-align: center
  color: $blue

ul
  padding-left: 0

// Nav
nav
  padding: 1rem 0 0
  width: 100vw
  display: flex
  justify-content: center
  a
    text-decoration: none
    color: $blue
    img
      max-width: 70px
      width: 100%
      height: 70px

.nav-wrapper
    position: fixed
    left: -6rem
    bottom: 50%
    transform: rotate(-90deg)
    background: $white
    z-index: 9
    a
      padding: 0 1rem
      text-decoration: none
      color: $blue
      display: inline-block
      &:after
        display: block
        content: ''
        border-bottom: 2px solid $blue
        transform: scaleX(0)
        transition: transform .2s ease-in-out
      &:hover
          &:after
            transform: scaleX(1)

.line
    position: fixed
    width: 2px
    height: 100%
    background: $blue
    left: 1.4rem

.logo
  max-width: 70px

.menu
  display: flex;
  margin-right: 1rem
  li
    list-style: none
    padding: 0 1rem
    a
      transition: text-decoration 0.3s ease
      &:hover
        text-decoration: line-through
        transition-delay: 0.3s
      &.active
        text-decoration: line-through



// Footer
footer
  position: absolute
  bottom: 0
  left: 50%
  transform: translateX(-50%)
  .footer-social, .social
    display: flex
    list-style: none
    padding-left: 0
    img
      width: 30px
      margin: 1rem


// Homepage
.home
  position: absolute
  left: 50%
  top: 50%
  transform: translate(-50%, -50%)
  width: 100vw
  a
    text-align: center
    display: block
    text-decoration: none
    color: $blue
    font-size: 2vw

.particles
  position: absolute
  width: 100%
  height: 100%
  z-index: -1

.typed
  margin: 0 auto
  display: block
  text-align: center
  padding: 1rem 0 1.6rem
  span
    font-size: 2vw
    background: $blue
    color: $white

// About
.content
  text-align: center

// Form
.contact-form
  display: block
  margin: 0 auto
  input, textarea
    display: block
    max-width: 560px
    width: 100%
    margin: 1rem auto
    padding: 1rem .5rem
    border: none
    font-size: 1rem
    text-align: center
    position: relative
    z-index: 1
    border-radius: 0
    border-width: 0 0 1px
    border-bottom-color: rgba(0,0,0,0.25)
    height: auto
    font-family: $titleFont
    &:focus
      box-shadow: none
      border-bottom-color: rgba(0,0,0,0.12)
      ~ .animated-label
        top: 0
        opacity: 1
        color: #8e44ad
        font-size: 12px
        &:after
          visibility: visible
          width: 100%
          left: 0

.form-submit
  width: 100%
  max-width: 100px
  position: relative
  background: transparent
  background: $blue
  border: 2px solid $blue
  color: $white
  transition: all 0.2s cubic-bezier(.25,.8,.25,1)
  cursor: pointer
  text-align: center
  display: block
  margin: 0 auto
  padding: 0.7rem
  font-size: 0.9rem
  font-weight: 500
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
  &:hover
    box-shadow: 0 2px 21px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22)

::placeholder
  color: rgba(0,0,0,0.8)
  font-size: 1rem
  transition: color 0.2 ease
  text-align: center

input:focus::placeholder
    color: transparent
    text-align: center

input:focus,
select:focus,
textarea:focus,
button:focus
    outline: none

@media (max-width: 509px)
  h1
    font-size: 15vw

  .typed
    span
      font-size: 6vw

  .particles
    display: none

  .contact-form
    display: block
    margin: 0 auto
    input, textarea
      max-width: 290px

  .line
    bottom: 1.6rem
    right: 0
    height: 2px
    width: 100%
    left: 0

  .nav-wrapper
    transform: none
    bottom: 0.9rem
    left: 50%
    transform: translateX(-50%)
    width: 15rem

  .home
    width: 90vw

